Fix minor spacing issues

--- a/app/app.scss
+++ b/app/app.scss
@@ -9,6 +9,7 @@ $sidebar-width: 150px;
 body {
     overflow-x: hidden;
     color: $color-text;
+    padding-top: 1.5em;
 }
 
 // map.scss is generated using DennisBecker/grunt-sass-globbing
