--- a/app/shared/field.directive.scss
+++ b/app/shared/field.directive.scss
@@ -6,4 +6,5 @@
 
 ul {
     padding-left: 16 / 14 * 1em;
+    margin-bottom: 0;
 }
